--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
         </button>
     </footer>
 
-    <script src="./src/script.js"></script>
+    <script src="./src/js/index.js" type="module"></script>
 </body>
 </html>
