feat: add header and improve styles

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
-    <title> - Pomodoro Focus</title>
+    <title>25:00 - Pomodoro Focus</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="header-container">
+        <a href="#" class="logo">Pomodoro Focus</a>
+      </div>
+    </header>
+
     <main class="container">
       <div class="tabs">
         <button class="tab pomodoro active">Pomodoro</button>
@@ -28,7 +34,7 @@
           <input
             type="text"
             class="new-task-input"
-            placeholder="Digite a nova tarefa"
+            placeholder="Enter new task"
           />
           <button class="add-task">Add</button>
         </div>
