feat: add footer

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       </div>
     </main>
 
+    <footer class="footer">
+      <p>&copy; 2025 Pomodoro Focus. All rights reserved.</p>
+    </footer>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
