feat: update modularization of the elements file and update styles

--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
     </header>
 
     <main class="container">
-      <div class="tabs">
-        <button class="tab pomodoro active">Pomodoro</button>
-        <button class="tab shortBreak">Short Break</button>
-        <button class="tab longBreak">Long Break</button>
-      </div>
+      <h2 class="timer-title">Focus Timer</h2>
 
       <div class="time-display">
         <span class="minutes">25</span>:<span class="seconds">00</span>
       </div>
 
-      <button class="start-button">START</button>
+      <div class="timer-controls">
+        <div class="tabs">
+          <button class="tab pomodoro active">Pomodoro</button>
+          <button class="tab shortBreak">Short Break</button>
+          <button class="tab longBreak">Long Break</button>
+        </div>
+
+        <button class="start-button">START</button>
+      </div>
 
       <div class="tasks">
         <h3>Tasks</h3>
@@ -42,7 +46,7 @@
     </main>
 
     <footer class="footer">
-      <p>&copy; 2025 Pomodoro Focus. All rights reserved.</p>
+      <p>&copy; 2025 devmoreir4. All rights reserved.</p>
     </footer>
 
     <script type="module" src="/src/main.ts"></script>
