--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
     <title>25:00 - Pomodoro Focus</title>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="./src/scss/styles.css" />
   </head>
   <body>
+    <div id="loading">
+      <div class="spinner"></div>
+    </div>
+
     <header class="header">
       <div class="header-container">
         <a href="#" class="logo">Pomodoro Focus</a>
